--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
     "apexcharts": "^3.15.0",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.11.0",
@@ -16,13 +17,14 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "^3.7.2",
     "urql": "^1.6.3"
   },
