--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
     "apexcharts": "^3.15.0",
+    "apollo-boost": "^0.4.7",
+    "apollo-link": "^1.2.13",
     "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
