--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react-redux": "^7.1.5",
     "apexcharts": "^3.15.0",
     "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.11.0",
