--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-components": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/recharts": "^1.8.5",
     "apexcharts": "^3.15.0",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
@@ -27,6 +29,7 @@
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
+    "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
