--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
     "@types/recharts": "^1.8.5",
-    "apexcharts": "^3.15.0",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
     "apollo-utilities": "^1.3.3",
+    "chart.js": "^2.9.3",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.11.0",
-    "react-apexcharts": "^1.3.6",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
